# CHANGELOG

## Better Shells Experience Tests - January 25 2026 - 18h25

- Added Exa, Ugrep, Bat and replace by default their coreutils command and replace their command with alias with a g in the fish shell
- Added those pkg into the arch essentials jsons files
- Fixed some hyprland changes
- Temporaly disabled the maxisum window border color change temporaly until i fixed it for the new hyprland version

## Big Merge - Janurary 24

- See merges info

## 2026/01/19 (dev branch) - 16:00

- Backported more changes from the bsd branch like for fastfetch, startship, bashrc and the VERSION file
- (in a second commit) , added a bashrc file to the list of change and fixed a fastfetch widhth and height issue backported from the bsd branch

## Seperared from BSD - January 19

- This branch is separated from the bsd branch due to difference between Linux and BSD
- BSD support is now on the bsd branch
- Updated the readme to reflect the changes
- removed `monitors.conf` since it is created by nwg-display
- removed some env that are now handled by nwg-look
- updated some Hyprland config
- removed files/scripts related to BSD
- backported some changes from the bsd branch like for fastfetch
- removed some unneeded files
- updated waybar config for more colors
- added a exemple of `monitors.conf` for Hyprland
- added `nerd-fonts` meta-package to the arch essentials software list for the installer

## BSD-Tested - January 11

- Renamed `.install` to `install.sh`
- Added `dockerfile` and `bsd.dockerfile` (WIP) for testing
- Fixed a lot of logic error
- Added yay (for Arch Only) and jq in the installer
- Temporaly remove
- Add SwayOSD to Hyprland
- Added documentation for dockerfile, and how to use it

## BSD-Tested - January 10

- Experiments
  - BSD Support
- Will tested in on BSD
- Focus on BSD
- Remove `index.theme` , since it is a wrriten by nwg-look, but added a `index.default.theme` to add `index.default.theme` to create it.