@@ -16,3 +16,4 @@ exec-once = systemctl --user start hyprpolkitagent
 # Network manager applet
 exec-once = nm-applet --indicator
 exec-once = blueman-applet
+exec-once = qs -c overview
