@@ -17,6 +17,7 @@ bind = $mainMod, T, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, W , exec, $emoji
 bind = $mainMod, L, exec, hyprlock
+bind = Super, TAB, exec, qs ipc -c overview call overview toggle
 bind =, PRINT, exec, hyprshot -m region  
 
 bind = $mainMod, 1, workspace, 1
