@@ -1,0 +1,3 @@
+#!/usr/bin/env sh
+
+ln -s ~/.dotfiles/scripts/xgui4-os-dotfiles-version /usr/bin/xgui4-os-dotfiles-version
