@@ -1,0 +1,7 @@
+#!/usr/bin/env sh
+
+if [ -f "$HOME/.dotfiles/VERSION" ]; then
+    cat ~/.dotfiles/VERSION
+else
+    echo "Xgui4 OS Dotfiles not installed."
+fi
